--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="page">
   
   <div id="start">
-    
+
     <h1>Hogwarts Trivia</h1>
 
     <button type="button">Start the Quiz!</button>
@@ -31,6 +31,9 @@
   <div id="questions">
     
     <h1>Hogwarts Trivia</h1>
+
+    <div id="show-number"></div>
+
 
     <p class="question">1. Which mode of transport do first-year students use when arriving at Hogwarts for the first time?</p>   
 
