--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
         <ul class="answers">   
 
-        <input type="radio" name="q1" value="a" id="q1a"><label for="q1a">Hippogriffs</label><br/>          
-        <input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Broomsticks</label><br/>            
-        <input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Side-Along-Apparition</label><br/>          
-        <input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Magical boats across the lake</label><br/>       
+        <input type="radio" name="q1" value="wrong" id="q1a"><label for="q1a">Hippogriffs</label><br/>          
+        <input type="radio" name="q1" value="wrong" id="q1b"><label for="q1b">Broomsticks</label><br/>            
+        <input type="radio" name="q1" value="wrong" id="q1c"><label for="q1c">Side-Along-Apparition</label><br/>          
+        <input type="radio" name="q1" value="correct" id="q1d"><label for="q1d">Magical boats across the lake</label><br/>       
         </ul>
 
         <hr>
@@ -51,10 +51,10 @@
 
         <ul class="answers">   
 
-        <input type="radio" name="q2" value="a" id="q2a"><label for="q2a">Under a statue of a house elf</label><br/>          
-        <input type="radio" name="q2" value="b" id="q2b"><label for="q2b">Under the floor of the staff room</label><br/>        
-        <input type="radio" name="q2" value="c" id="q2c"><label for="q2c">At the back of the potions supply cupboard</label><br/>          
-        <input type="radio" name="q2" value="d" id="q2d"><label for="q2d">Behind a portrait of a bowl of fruit</label><br/>       
+        <input type="radio" name="q2" value="wrong" id="q2a"><label for="q2a">Under a statue of a house elf</label><br/>          
+        <input type="radio" name="q2" value="wrong" id="q2b"><label for="q2b">Under the floor of the staff room</label><br/>        
+        <input type="radio" name="q2" value="wrong" id="q2c"><label for="q2c">At the back of the potions supply cupboard</label><br/>          
+        <input type="radio" name="q2" value="correct" id="q2d"><label for="q2d">Behind a portrait of a bowl of fruit</label><br/>       
         </ul>
 
         <hr>
@@ -64,10 +64,10 @@
 
         <ul class="answers">   
 
-        <input type="radio" name="q3" value="a" id="q3a"><label for="q3a">History of Magic</label><br/>          
-        <input type="radio" name="q3" value="b" id="q3b"><label for="q3b">Muggle Studies</label><br/>            
-        <input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Ancient Ruins</label><br/>          
-        <input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Arithmancy</label><br/>       
+        <input type="radio" name="q3" value="correct" id="q3a"><label for="q3a">History of Magic</label><br/>          
+        <input type="radio" name="q3" value="wrong" id="q3b"><label for="q3b">Muggle Studies</label><br/>            
+        <input type="radio" name="q3" value="wrong" id="q3c"><label for="q3c">Ancient Ruins</label><br/>          
+        <input type="radio" name="q3" value="wrong" id="q3d"><label for="q3d">Arithmancy</label><br/>       
         </ul>
 
         <hr>
@@ -76,10 +76,10 @@
 
         <ul class="answers">   
 
-        <input type="radio" name="q4" value="a" id="q4a"><label for="q4a">Phoenixes</label><br/>          
-        <input type="radio" name="q4" value="b" id="q4b"><label for="q4b">A lion and a unicorn</label><br/>            
-        <input type="radio" name="q4" value="c" id="q4c"><label for="q4c">A lion, a snake, a badger, and a raven</label><br/>          
-        <input type="radio" name="q4" value="d" id="q4d"><label for="q4d">Winged boars</label><br/>       
+        <input type="radio" name="q4" value="wrong" id="q4a"><label for="q4a">Phoenixes</label><br/>          
+        <input type="radio" name="q4" value="wrong" id="q4b"><label for="q4b">A lion and a unicorn</label><br/>            
+        <input type="radio" name="q4" value="wrong" id="q4c"><label for="q4c">A lion, a snake, a badger, and a raven</label><br/>          
+        <input type="radio" name="q4" value="correct" id="q4d"><label for="q4d">Winged boars</label><br/>       
         </ul>
 
         <hr>
@@ -88,10 +88,10 @@
 
         <ul class="answers">   
 
-        <input type="radio" name="q5" value="a" id="q5a"><label for="q5a">Never tickle a sleeping dragon</label><br/>          
-        <input type="radio" name="q5" value="b" id="q5b"><label for="q5b">Never annoy a sleeping dragon</label><br/>          
-        <input type="radio" name="q5" value="c" id="q5c"><label for="q5c">Never tickle a snoring dragon</label><br/>
-        <input type="radio" name="q5" value="d" id="q5d"><label for="q5d">Always tickle a sleeping dragon</label><br/>       
+        <input type="radio" name="q5" value="correct" id="q5a"><label for="q5a">Never tickle a sleeping dragon</label><br/>          
+        <input type="radio" name="q5" value="wrong" id="q5b"><label for="q5b">Never annoy a sleeping dragon</label><br/>          
+        <input type="radio" name="q5" value="wrong" id="q5c"><label for="q5c">Never tickle a snoring dragon</label><br/>
+        <input type="radio" name="q5" value="wrong" id="q5d"><label for="q5d">Always tickle a sleeping dragon</label><br/>       
         </ul>
 
         <hr>
@@ -100,15 +100,26 @@
 
         <ul class="answers">   
 
-        <input type="radio" name="q5" value="a" id="q5a"><label for="q5a">Devil's Snare</label><br/>          
-        <input type="radio" name="q5" value="b" id="q5b"><label for="q5b">The stairs turn into a long, smooth stone slide</label><br/>           
-        <input type="radio" name="q5" value="c" id="q5c"><label for="q5c">The intruder is transfigured into a toad</label><br/>
-        <input type="radio" name="q5" value="d" id="q5d"><label for="q5d">A full Body-Bind cure is put on the intruder</label><br/>       
+        <input type="radio" name="q5" value="wrong" id="q5a"><label for="q5a">Devil's Snare</label><br/>          
+        <input type="radio" name="q5" value="correct" id="q5b"><label for="q5b">The stairs turn into a long, smooth stone slide</label><br/>           
+        <input type="radio" name="q5" value="wrong" id="q5c"><label for="q5c">The intruder is transfigured into a toad</label><br/>
+        <input type="radio" name="q5" value="wrong" id="q5d"><label for="q5d">A full Body-Bind cure is put on the intruder</label><br/>       
         </ul>
-
+      
   </div>
   <!-- End of "Questions" div-->
+   
 
+  <div id="end">
+
+    <h1>Expelliarmus!</h1>
+    <p>All Done!</p>
+    <p class="numCorrect"></p>
+    <p class="numIncorrect"></p>
+    <p class="numUnanswered"></p>
+
+  </div>
+  <!-- End of End dive-->
 
 
 </div>
